--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html  prefix="og: http://ogp.me/ns#" lang="ru">
 
 <head>
 
     <meta charset="utf-8">
 
-    <title>МИККИ - Магазин игрушек в Златоусте</title>
+    <title>Магазин игрушек МИККИ в Златоусте</title>
     <meta name="description" content="Игрушки в городе Златоуст в магазине МИККИ. Здесь огромный выбор различных игрушек, для разных возрастов и категорий.">
-    <meta name="Keywords" content="Игршки,Златоуст,Микки,Магазин игрушек, игрушки недорого, для малышей "> 
+    <meta name="Keywords" content="Игрушки,Златоуст,Микки,Магазин игрушек, игрушки недорого, для малышей "> 
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <meta property="og:image" content="img/media.jpg">
+    <meta property="og:title" content="Магазин игрушек Микки" />
+    <meta property="og:type" content="web-site" />
+    <meta property="og:url" content="https://mikkizlt.github.io/" />
+    <meta property="og:image" content="https://mikkizlt.github.io/img/media.jpg" />
+    <meta property="og:description" content="Игрушки в магазине МИККИ Златоуст.Огромный выбор." />
+    <meta property="og:local" content="ru_RU" />
+    <meta property="og:site_name" content="Магазин игрушек МИККИ" />
+
+
     <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.8.0/slick.css"/>
 
