--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="Магазин игрушек Микки" />
     <meta property="og:type" content="web-site" />
     <meta property="og:url" content="https://mikkizlt.github.io/" />
-    <meta property="og:image" content="https://mikkizlt.github.io/img/media.jpg" />
+    <meta property="og:image" content="https://mikkizlt.github.io/img/head.png" />
     <meta property="og:description" content="Игрушки в магазине МИККИ Златоуст.Огромный выбор." />
     <meta property="og:local" content="ru_RU" />
     <meta property="og:site_name" content="Магазин игрушек МИККИ" />
